@@ -71,6 +71,7 @@ t/52_display_diffs.t
 t/53_show_index.t
 t/54_redirect.t
 t/55_node_history.t
+t/56_diffs_with_macros.t
 t/61_bug_textareas.t
 t/62_bug_os_coords.t
 t/63_bug_map_link_no_address.t
