@@ -22,6 +22,7 @@ Data::Dumper
   DBD::SQLite
 )
 File::Spec::Functions
+File::Temp
 (
   Geography::NationalGrid::GB
     -- or --
